--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "componentcrew",
-  "homepage": "https://Liendea.github.io/componentCrew-personal",
+  "homepage": "https://github.com/Liendea/ComponentCrew-personal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
